# Linux-Shell

./: .gitignore  CMakeLists.txt  README.md  Shell.c  Shell_project.c  build_shell  clean_config  history.c  history.h  job_control.c  job_control.h  pipe.c  pipe.h  pipe_test  pipe_test.c  readline.c  readline.h  run_shell  run_tests
common/: common.c  common.h
history/: history.c  history.h
internal_commands/: bg.c  cd.c  common.c  fg.c  historial.c  internal_commands.h  sig.c  team.c
job/: job_control.c  job_control.h
pipe/: pipe.c  pipe.h
readline/: cursor.c  cursor.h  readline.c  readline.h
test/: common_test.h  find_pipe_test.c  find_pipes_test.c  new_command_test.c  pipe_test.c  team_test.c
